--- a/index.html
+++ b/index.html
@@ -46,8 +46,11 @@
       background: linear-gradient(180deg, rgba(0,0,0,0.25) 0%, rgba(0,0,0,0.35) 100%);
       mix-blend-mode: multiply;
     }
+
+    
     header.hero .content {
       position: relative;
+      padding-top: 25px;
       z-index: 2;
       text-align: center;
       padding: 6rem 1.25rem 4rem;
@@ -55,6 +58,9 @@
       max-width: 900px;
       margin: 0 auto;
     }
+
+
+    
     header.hero h1 {
       margin: 0 0 .5rem 0;
       font-size: clamp(2rem, 4vw, 3rem);
