--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@
     
     header.hero .content {
       position: relative;
-      padding-top: 250px;
+      
       z-index: 2;
       text-align: center;
       padding: 6rem 1.25rem 4rem;
       color: #fff;
       max-width: 900px;
       margin: 0 auto;
+      margin-top: 100px;
     }
 
 
