--- a/index.html
+++ b/index.html
@@ -47,17 +47,27 @@
       mix-blend-mode: multiply;
     }
 
-    
+    /* original
     header.hero .content {
       position: relative;
-      
       z-index: 2;
       text-align: center;
       padding: 6rem 1.25rem 4rem;
       color: #fff;
       max-width: 900px;
       margin: 0 auto;
-      margin-top: 100px;
+    }
+    */
+
+     header.hero .content {
+      position: absolute;
+      bottom: 50px;
+      z-index: 2;
+      text-align: center;
+      padding: 6rem 1.25rem 4rem;
+      color: #fff;
+      max-width: 900px;
+      margin: 0 auto;
     }
 
 
